# OptSpecClassifier

./: Auto_OptSepcClassifier_scaler_AGN_type.sav  Classification_example.ipynb  EW_classifier.py  EW_example_GIT.ipynb  README.md  SDSS_example_spectrum_SFG.csv  SDSS_example_spectrum_broad_line_AGN.csv  environment.yml  pyproject.toml
Models/: Auto_OptSepcClassifier_SVM.sav  Auto_OptSepcClassifier_SVM_AGN_type.sav  Auto_OptSepcClassifier_scaler.sav
Notebooks/: Classification_example.ipynb  Classification_example_2.ipynb
